feat: config general, now fineshed
