# app/Http/Controllers/SwaggerController.php
@@ -8,6 +8,16 @@ namespace App\Http\Controllers;
  *     version="1.0.0",
  *     description="This is a sample API documentation."
  * )
+ *
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Use a JWT token to authorize",
+ *     name="Authorization",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="bearerAuth",
+ * )
  */
 class SwaggerController extends Controller
 {
